style(PreviewListWithTextOnly): add style to PreviewListWithTextOnly

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -118,6 +118,7 @@
   --preview-main-fontsize: 2.5cqw;
   --preview-accent-fontsize: 3cqw;
 
+  --preview-page-item-list-padding-left: 1.8em;
   --preview-page-item-list-gap: 0.5em;
 
   /* --box-radius: max(6px, 0.9vmin); */
