--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -119,6 +119,7 @@
   --preview-accent-fontsize: 3cqw;
 
   --preview-page-item-list-padding-left: 1.8em;
+  --preview-page-item-list-item-padding-top: 0.3em;
   --preview-page-item-list-gap: 0.5em;
 
   /* --box-radius: max(6px, 0.9vmin); */
