--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,8 @@ body {
   margin: 0 auto;
   min-height: 100vh; /*it is assumed the same for <html>*/
   min-height: 100dvh; /* if supported */
-  height: 100%;
+  height: 100vh; /*it is assumed the same for <html>*/
+  height: 100dvh; /* if supported */
 
   min-width: 320px;
   width: 100%;
@@ -46,7 +47,7 @@ body {
   /* user-select: none; */
 
   display: flex;
-  overflow: auto;
+  overflow: hidden;
 }
 
 #root {
@@ -54,6 +55,7 @@ body {
   flex-direction: column;
   align-items: center;
   flex: 1;
+  width: 100%;
 }
 
 #root > * {
