--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -1,16 +1,11 @@
 main {
   flex: 1;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  overflow-y: hidden;
+  overflow-x: auto;
 }
 
 main .preview-panel {
   flex: 1;
-}
-
-/* tablet or larger, or landscape (vs portrait), 641px (phone), 961px (tablet) */
-@media only screen and (min-width: 768px), (orientation: landscape) {
-  main {
-    flex-direction: row;
-  }
 }
