feat(Main): add style for main.has-overflow-y
The children elements .edit-panel and .preview-panel are set to occupy
the full viewport width when the main has the .has-overflow-y class,
using the property "min-width: 100vw";
.

--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -9,3 +9,8 @@ main {
 main .preview-panel {
   flex: 1;
 }
+
+main.has-overflow-y .edit-panel,
+main.has-overflow-y .preview-panel {
+  min-width: 100vw;
+}
