--- a/src/styles/editor/EditSectionPanel.css
+++ b/src/styles/editor/EditSectionPanel.css
@@ -1,15 +1,21 @@
 .edit-section-panel {
   background-color: var(--editor-section-bg-col);
   padding: var(--editor-section-padding);
+  border-radius: 0 var(--editor-form-gap) var(--editor-form-gap) 0;
+  box-shadow: var(--box-shadow);
 
   display: flex;
   flex-direction: column;
   gap: var(--editor-section-gap);
+
+  max-height: 100%;
 }
 
 .edit-section-panel h3 {
   font-size: var(--h3-fontsize);
+  color: var(--edit-section-highlight-color);
   font-weight: bold;
+  text-align: right;
 }
 
 .edit-section-panel form {
@@ -17,6 +23,11 @@
 
   display: flex;
   flex-direction: column;
-
   gap: var(--editor-form-gap);
+
+  overflow-x: hidden;
+  overflow-y: auto;
+  padding: var(--editor-form-gap);
+  border-top: 2px solid var(--editor-bg-col);
+  border-bottom: 2px solid var(--editor-bg-col);
 }
