--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -40,6 +40,10 @@
   --input-placeholder-color: var(--col-dark-4);
   --label-color: var(--col-dark-2);
   --edit-section-highlight-color: var(--col-accent-1);
+  --edit-section-highlight-color-secondary: var(--col-accent-2);
+
+  --editor-section-button-color: var(--col-light-4);
+  --editor-section-button-color-secondary: var(--col-light-3);
 
   /* Font family */
   --main-font: "Urbanist";
@@ -47,7 +51,7 @@
   --h2-font: "Urbanist";
 
   /* Font sizes */
-  --txt-fontsize: max(18px, 2vmin);
+  --txt-fontsize: max(18px, 1vmin);
   --txt-lineheight: 1.2;
 
   --h1-fontsize: 2rem;
@@ -69,10 +73,15 @@
   --editor-padding-ud: var(--page-padding-ud);
   --editor-padding: var(--editor-padding-ud) 0;
 
+  --editor-section-padding-lr: var(--page-padding-lr);
   --editor-section-padding: var(--page-padding);
   --editor-section-gap: 1rem;
   --editor-form-padding: 1rem;
   --editor-form-gap: 0.5rem;
+  --editor-section-button-icon-size: 1em;
+  --editor-section-button-padding-tb: min(2%, 0.4em);
+  --editor-section-button-padding: var(--editor-section-button-padding-tb)
+    min(4%, 0.8em);
 
   --input-padding: 2px;
   --label-input-gap: 0.5em;
@@ -128,7 +137,10 @@
 
   /* Shadows */
   /* --txt-shadow: 0 3px 6px var(--col-black);*/
-  --box-shadow: 0 0px 10px var(--col-dark-4);
+  --box-shadow-blur: 10px;
+  --box-shadow-spread: 0px;
+  --box-shadow: 0 0px var(--box-shadow-blur) var(--box-shadow-spread)
+    var(--col-dark-4);
 
   /* Animations on hover / active / ...*/
   /* --transition-time: 0.8s; */
