--- a/src/styles/base/InputWithLabel.css
+++ b/src/styles/base/InputWithLabel.css
@@ -13,69 +13,126 @@
 }
 
 .input-with-label input,
+.input-with-label select,
 .input-with-label textarea {
   flex: 1;
   line-height: 1;
   font-size: var(--input-fontsize);
-  background-color: transparent;
-
+  background-color: var(--input-bg-color);
+  border-radius: var(--input-border-radius);
+  box-shadow: var(--input-shadow);
   border: none;
   padding: var(--input-padding);
   color: var(--input-color);
+  min-width: 0;
+}
+
+.input-with-label input[type="checkbox"] {
+  flex: 0;
+  --input-size: calc(var(--input-fontsize) * 1.3 + 2 * var(--input-padding-tb));
+  min-width: var(--input-size);
+  min-height: var(--input-size);
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+input:checked {
+  position: relative;
+}
+
+input:checked::before {
+  content: "✓";
+  color: var(--col-txt);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.input-with-label:has(input[type="checkbox"]) {
+  align-items: center;
 }
 
 .input-with-label input::placeholder,
-.input-with-label textarea::placeholder {
+.input-with-label textarea::placeholder,
+.input-with-label input:disabled,
+.input-with-label textarea:disabled,
+.input-with-label select:disabled {
   color: var(--input-placeholder-color);
 }
 
-.input-with-label input {
+.input-with-label input,
+.input-with-label select,
+.input-with-label textarea {
   border-bottom: var(--input-border);
   margin-bottom: var(--input-border-delta);
 }
 
+.input-with-label input[type="checkbox"] {
+  margin: 0;
+  border: none;
+}
+
 .input-with-label textarea {
-  height: calc(var(--textarea-rows) * 1em + 2 * var(--input-padding));
-  border-right: var(--input-border);
-  /* padding-right: calc(var(--input-padding) + var(--input-border-delta)); */
-  margin-right: var(--input-border-delta);
+  box-sizing: content-box;
+  height: calc(var(--textarea-rows) * 1.01em);
 }
 
 /* hover / focus style */
 
-.input-with-label input:hover,
-.input-with-label textarea:hover {
-  border-color: var(--input-color-hover);
-}
-
-.input-with-label input:hover,
-.input-with-label input:focus {
+.input-with-label input:hover:not(:disabled),
+.input-with-label input:focus:not(:disabled),
+.input-with-label textarea:hover:not(:disabled),
+.input-with-label textarea:focus:not(:disabled),
+.input-with-label select:hover:not(:disabled),
+.input-with-label select:focus:not(:disabled) {
   border-width: var(--input-border-size-plus-delta);
   margin-bottom: 0;
 }
 
-.input-with-label textarea:hover,
-.input-with-label textarea:focus {
-  border-width: var(--input-border-size-plus-delta);
-  /* padding-right: var(--input-padding); */
-  margin-right: 0;
+.input-with-label input[type="checkbox"]:hover:not(:disabled),
+.input-with-label input[type="checkbox"]:focus:not(:disabled) {
+  outline-style: solid;
+  outline-width: var(--input-border-size-plus-delta);
+  outline-offset: calc(-1 * var(--input-border-size-plus-delta));
 }
 
-.input-with-label input:focus,
-.input-with-label textarea:focus {
+.input-with-label input:hover:not(:disabled),
+.input-with-label textarea:hover:not(:disabled),
+.input-with-label select:hover:not(:disabled) {
+  border-color: var(--input-color-hover);
+  outline-color: var(--input-color-hover);
+}
+
+.input-with-label input:focus:not(:disabled),
+.input-with-label textarea:focus:not(:disabled),
+.input-with-label select:focus:not(:disabled) {
   outline: none;
   border-color: var(--input-color-focus);
+  outline-color: var(--input-color-focus);
 }
 
 /* highlight required inputs / textareas */
 
-.input-with-label label:before,
 .input-with-label label:before {
   color: var(--input-color-required);
   font-weight: bold;
 }
 
 .input-with-label:has(input:required) label:before,
-.input-with-label:has(textarea:required) label:before {
+.input-with-label:has(textarea:required) label:before,
+.input-with-label:has(select:required) label:before {
   content: "*";
+}
+
+/* date input */
+.date-input-with-label select#fromDateYear,
+.date-input-with-label select#toDateYear {
+  flex: 1;
+}
+
+.date-input-with-label select#fromDateMonth,
+.date-input-with-label select#toDateMonth {
+  flex: 2;
 }
