feat(DownloadButton): add DownloadButton component
A button that downloads an HTML element as a PDF when clicked is
implemented in its own module, and instantiated in the Main component.

To fix:
- embed custom fonts in the PDF to use it
- convert svg icons to png (they are not saved properly)

Issues:
Sometimes, when exporting the PDF, the block elements aren't split
correctly between pages, despite having used the *page-break-inside:
avoid;* and *break-inside: avoid;* css properties.

--- a/src/styles/preview/PreviewPage.css
+++ b/src/styles/preview/PreviewPage.css
@@ -12,6 +12,31 @@
   color: var(--preview-main-text-color);
 }
 
-.preview-page:last-child {
-  padding-bottom: var(--preview-page-padding);
+/* show top/bottom padding when not saving pdf (otherwise, this is already included when saving into pdf) */
+.preview-page:not(.printing) {
+  padding: 5% 0;
 }
+
+/* hide scrollbars when saving pdf*/
+.preview-page.printing::-webkit-scrollbar {
+  display: none;
+}
+
+/* --- NOT WORKING --------------------------------- */
+/* .preview-page,
+.preview-page * */
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+div,
+span,
+img,
+svg,
+li {
+  page-break-inside: avoid;
+  break-inside: avoid;
+}
+/* ------------------------------------------------- */
