fix(PreviewPersonalInfoPanel): use png icons instead of svg icons, to export them correctly with jsPdf
The Icon component has been properly modified to load a png image, if
required, which can be correctly exported with jsPdf.

The involved icons have been converted to png, too.

Note that the icon color cannot be modified if it is png, so the icon
png image must be in the correct color (eg, white).

--- a/src/styles/base/TextWithIcon.css
+++ b/src/styles/base/TextWithIcon.css
@@ -5,7 +5,12 @@
 }
 
 .text-with-icon .icon,
-.text-with-icon .icon svg {
-  width: 1em;
-  height: 1em;
+.text-with-icon .icon svg,
+.text-with-icon .icon img {
+  width: 1.1em;
+  height: 1.1em;
+}
+
+.text-with-icon .text- {
+  vertical-align: center;
 }
