--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,6 +1,15 @@
-@import url("https://fonts.googleapis.com/css2?family=Urbanist:300,400,500,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,300..900;1,300..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 :root {
+  /* Font family */
+  --main-font: "Exo 2", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  --h1-font: "Rubik", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  --h2-font: "Rubik", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  --h3-font: "Rubik", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  --page-font: "Poppins", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+
   /* Colors (palette)*/
   --col-light-1: #ffffff; /*white*/
   --col-light-2: #fcf6f0;
@@ -56,11 +65,6 @@
 
   --disabled-button-opacity: 0.5;
   --round-btn-opacity: 0.8;
-
-  /* Font family */
-  --main-font: "Urbanist";
-  --h1-font: "Urbanist";
-  --h2-font: "Urbanist";
 
   /* Font sizes */
   --txt-fontsize: max(18px, 1vmin);
