style(PreviewItemWithDates): adjust padding on PreviewItemWithDates components

--- a/src/styles/preview/PreviewItemWithDates.css
+++ b/src/styles/preview/PreviewItemWithDates.css
@@ -50,4 +50,10 @@
 .preview-item-with-dates .description {
   grid-area: other;
   color: var(--preview-secondary-text-color);
+  padding-top: var(--preview-page-item-list-item-padding-top);
+}
+
+.preview-item-with-dates .description {
+  /* padding-left: var(--preview-page-item-list-item-padding-top); */
+  padding-left: var(--preview-page-item-list-padding-left);
 }
